test/classes/delete-free/bad-retain-error.1.good
bad-retain-error.chpl:13: In function 'main':
bad-retain-error.chpl:16: error: Cannot assign to borrowed A? from borrowed B?
